# msfs-local-bridge

./: .gitignore  CustomFlightRouteService.cs  FIRST_TIME_CHECKLIST.md  MsfsLocalBridge.csproj  Program.cs  README.md  SHA256SUMS-v0.1.3.txt  SHA256SUMS-v0.2.10.txt  SHA256SUMS-v0.2.11.txt  SHA256SUMS-v0.2.12.txt  SHA256SUMS-v0.2.13.txt  SHA256SUMS-v0.2.14.txt  SHA256SUMS-v0.2.6.txt  SHA256SUMS-v0.2.7.txt  SimConnectWorkerOwnshipService.cs  diagnostics-v0.ps1  preflight-v0.ps1  publish-v0.ps1  publish-winui-v0.ps1  repair-elevated-v0.ps1  run-bridge.ps1  setup-wss-cert-v0.ps1  start-msfs-sync.ps1  start.ps1
.github/workflows/: winui-package.yml
apps/BridgeAssistant.WinUI/: App.xaml  App.xaml.cs  BridgeAssistant.WinUI.csproj  MainWindow.xaml  MainWindow.xaml.cs  README.md
apps/BridgeAssistant.WinUI/Models/: BridgeSettings.cs  DiagnosticsReport.cs
apps/BridgeAssistant.WinUI/Services/: BridgeController.cs  BridgeStateStore.cs  IBridgeHostApi.cs  LocalBridgeHostApi.cs  (+2 more)
docs/: post-format-rebuild-checklist.md  simconnect-worker-architecture.md
lab/: browser-probe-snippet.js
lab/bridge-assistant-ui-prototype/: README.md  app-lite.js  app-windows.js  app-winui.js  app.js  index-lite.html  index-windows.html  index-winui.html  index.html  styles-lite.css  styles-windows.css  styles-winui.css  styles.css
lab/windows-host-onboarding-v1/: app.js  index.html
lab/winui/: index-winui.html
lab/winui-v2/: README.md  app.js  index.html  styles.css
lib/: .gitkeep
workers/simconnect-native/: CMakeLists.txt  README.md
workers/simconnect-native/src/: main.cpp
(+12 files in other folders)
